# price-tracker

./: .gitignore  AI-NOTES.md  DESIGN.md  PROJECT_CONTEXT.md  README.md  config.example.yaml  cursorrules  pyproject.toml
src/price_monitor/: __main__.py  config.py  dashboard.py  detector.py  main.py  models.py  notifier.py  scheduler.py  scraper.py  storage.py
src/price_monitor/templates/: index.html
tests/: conftest.py  test_detector.py  test_notifier.py  test_scraper.py  test_scraper_live.py  test_storage.py
tests/fixtures/: bot_check.html  product.html
